--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.564.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "zustand": "^5.0.5",
-    "lucide-react": "^0.564.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "vite": "^6.2.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "tailwindcss": "^4.1.0",
     "@tailwindcss/vite": "^4.1.0",
-    "autoprefixer": "^10.4.21",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
-    "@types/node": "^22.14.0"
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.0",
+    "typescript": "~5.8.2",
+    "vercel": "^50.17.1",
+    "vite": "^6.2.0"
   }
 }
